--- a/.gitignore
+++ b/.gitignore
@@ -1,53 +1,79 @@
+
 import { FeeGroup } from './entities/FeeGroups.js';
 import numberToCurrency from '../core/helpers/currency.js';
 
-export default class BankAccountFee {
-  #feeName = 'Bank Account Fees';
-  #bank = {};
+export default class InvestmentAccountFee {
+  #feeName = 'Investment Account Fees';
+  #investiment = {};
   #accounts = [];
   #accountsDDA = [];
+  #allExceptions = new Set();
 
-  constructor(fees, accounts) {
+  constructor(fees, accounts, equityField) {
     if (!fees || !Array.isArray(fees) || fees.length === 0) {
       throw new Error('Fees is empty or undefined');
     }
-
-    // Seleciona os dados do fee do tipo Bank Account Fees
-    this.#bank = fees.filter((x) => x.feeType === this.#feeName)[0];
-    if (!this.#bank || !Array.isArray(this.#bank.feeGroups)) {
-      throw new Error('Bank Account Fees or feeGroups are undefined');
+    // Seleciona o objeto cujo FeeType seja "Investment Account Fees"
+    this.#investiment = fees.filter((x) => x.feeType === this.#feeName)[0];
+    if (
+      !this.#investiment ||
+      !Array.isArray(this.#investiment.feeGroups) ||
+      !this.#investiment.feeGroups.length
+    ) {
+      this.#investiment = {};
+      return;
     }
 
-    if (!accounts || !Array.isArray(accounts) || accounts.length === 0) {
-      throw new Error('Accounts is empty or undefined');
+    // Filtra as contas de investimento (feeType === 3)
+    this.#accounts = accounts.filter((x) => x.feeType === 3);
+    if (this.#accounts.length < 1) {
+      this.#investiment = {};
+      return;
     }
 
-    const feeGroupCode = this.#bank.feeGroups[0].code;
-    // Filtra as contas que pertencem ao grupo e que são do tipo Bank Account (feeType === 2)
-    const accountsFiltered = accounts.filter(
-      (x) => x.feeGroup === feeGroupCode && x.feeType === 2
+    // Para cada conta, cria itens para os códigos 5 e 7 (para Investment)
+    this.#accounts.forEach((acc) => {
+      if (acc.ddaNumber) {
+        this.#accountsDDA.push({
+          number: acc.ddaNumber,
+          code: 5,
+          entity: acc.entity || null,
+        });
+        this.#accountsDDA.push({
+          number: acc.ddaNumber,
+          code: 7,
+          entity: acc.entity || null,
+        });
+        this.#accountsDDA.push({
+          number: acc.ddaNumber,
+          code: 6,
+          entity: acc.entity || null,
+        });
+        this.#accountsDDA.push({
+          number: acc.ddaNumber,
+          code: 9,
+          entity: acc.entity || null,
+        });
+      }
+    });
+
+    // Deduplica os itens de accountsDDA com base na chave composta "number-code"
+    this.#accountsDDA = Array.from(
+      new Map(this.#accountsDDA.map(item => [`${item.number}-${item.code}`, item])).values()
     );
-    this.#accounts = Array.from(
-      new Map(accountsFiltered.map((a) => [a.ddaNumber, a])).values()
-    );
-    // Obtém os números de conta de forma única (já em string)
-    this.#accountsDDA = this.#accounts.map((a) => a.ddaNumber.toString());
 
-    if (this.#accounts.length === 0) {
-      throw new Error('No accounts matched with Bank Account Fees feeGroup');
-    }
-
-    // Cria os feeGroups para cada conta única
     this.#addMultiplesAccount(this.#accounts[0].cifno);
-    // Atualiza os valores dos fees para cada grupo
-    this.#addCurrentClientValue();
+    this.#addCurrentClientValue(equityField);
   }
 
-  /**
-   * Deduplica os campos (fields) com base no fee code.
-   * @param {Array} fields - Array de fields a serem deduplicados.
-   * @returns {Array} - Array de fields sem duplicação.
-   */
+  get fee() {
+    if (!this.#investiment || !this.#investiment.feeGroups) {
+      return null;
+    }
+    return this.#investiment;
+  }
+
+  // Deduplica os fields com base no fee code
   #deduplicateFields(fields) {
     const map = new Map();
     for (const field of fields) {
@@ -59,70 +85,111 @@ export default class BankAccountFee {
   }
 
   /**
-   * Para cada conta única, gera novos feeGroups a partir dos templates,
-   * atribuindo o número da conta (accountNumber) e, se for "Client Current Fees",
-   * marca os campos com isCurrentClient.
-   * @param {string} cif - O CIF da conta.
+   * Para cada feeGroup de investimento e para cada conta única (accountsDDA),
+   * clona o feeGroup atribuindo o número da conta (accountNumber) e o entityCode.
+   * Se o grupo vier com fields vazio, insere um field default para evitar erros no front.
    */
   #addMultiplesAccount(cif) {
-    if (!this.#accounts || this.#accounts.length < 1) {
-      this.#bank = {};
-      return;
-    }
+    const result = {};
 
-    const feeGroupTemplates = this.#bank.feeGroups;
-    const newFeeGroups = [];
+    for (const feeGroup of this.#investiment.feeGroups) {
+      // Garante que fields esteja definido
+      feeGroup.fields = feeGroup.fields || [];
+      // Clona os fields para evitar referências compartilhadas
+      feeGroup.fields = feeGroup.fields.map((field) => ({
+        ...field,
+        exceptionOptions: field.exceptionOptions
+          ? field.exceptionOptions.map((opt) => ({ ...opt }))
+          : []
+      }));
 
-    for (const account of this.#accounts) {
-      const accountNumber = account.ddaNumber.toString();
-      for (const template of feeGroupTemplates) {
-        // Clona os fields para evitar referências compartilhadas
-        let clonedFields = template.fields.map((field) => ({
-          ...field,
-          exceptionOptions: field.exceptionOptions
-            ? field.exceptionOptions.map((opt) => ({ ...opt }))
-            : []
-        }));
-
-        // Se o grupo for "Client Current Fees", marca os campos como current client
-        if (template.name === 'Client Current Fees') {
-          clonedFields = clonedFields.map(field => ({ ...field, isCurrentClient: true }));
+      for (const account of this.#accountsDDA) {
+        if (!result[account.number]) {
+          result[account.number] = {};
         }
-
-        // Deduplica os fields com base no fee code
-        clonedFields = this.#deduplicateFields(clonedFields);
-
-        const newFeeGroup = new FeeGroup({
-          name: template.name,
-          fields: clonedFields,
-          cif,
-          accountNumber,
-          visible: template.visible,
-          code: template.code
-        });
-        newFeeGroups.push(newFeeGroup);
+        // Filtra os fields do grupo que correspondem ao código (5 ou 7)
+        let fieldsForAccount = feeGroup.fields.filter((x) => x.code === account.code);
+        // Se não houver fields para esta conta, insere um fallback para evitar erro no front
+        if (fieldsForAccount.length === 0) {
+          fieldsForAccount.push({
+            code: account.code,
+            name: '',
+            defaultValue: '',
+            tooltip: '',
+            isException: true,
+            exceptionOptions: []
+          });
+        }
+        if (!result[account.number][feeGroup.name]) {
+          result[account.number][feeGroup.name] = [];
+          // Processa as exceptionOptions para agregar em allExceptions
+          feeGroup.fields.forEach((item) => {
+            item.exceptionOptions = item.exceptionOptions.filter((x) => !x.retired);
+            item.exceptionOptions.forEach(this.#allExceptions.add, this.#allExceptions);
+          });
+          const newFeeGroup = new FeeGroup({
+            name: feeGroup.name,
+            fields: fieldsForAccount,
+            cif,
+            accountNumber: account.number,
+            visible: feeGroup.visible,
+            code: feeGroup.code,
+            entityCode: account.entity,
+          });
+          result[account.number][feeGroup.name].push(newFeeGroup);
+        } else {
+          const feeGroupToAddFields = result[account.number][feeGroup.name][0];
+          feeGroupToAddFields.fields = [...feeGroupToAddFields.fields, ...fieldsForAccount];
+        }
       }
     }
 
-    this.#bank.feeGroups = newFeeGroups;
+    // Agrupa os feeGroups por conta
+    const feeGroupsByAccount = Object.keys(result).reduce((acc, accountNumber) => {
+      Object.keys(result[accountNumber]).forEach((groupName) => {
+        acc.push(result[accountNumber][groupName]);
+      });
+      return acc;
+    }, []);
+
+    this.#investiment.feeGroups = [];
+    for (const feeGroups of feeGroupsByAccount) {
+      for (const feeGroup of feeGroups) {
+        this.#investiment.feeGroups.push(feeGroup);
+      }
+    }
   }
 
   /**
-   * Atualiza os valores dos fees para cada grupo, formatando o defaultValue
-   * e labelValue dos campos current client para terem duas casas decimais e "$".
+   * Atualiza os valores dos fields para cada FeeGroup de investimento.
+   * Para o field com código 5 (que traz um valor textual completo, como "$0.10 per share, min charge of $150 per trade"),
+   * define labelValue igual a defaultValue; para os demais, tenta converter defaultValue para número e formata como moeda.
+   * A correspondência é feita usando a lista deduplicada accountsDDA.
    */
-  #addCurrentClientValue() {
-    for (const feeGroup of this.#bank.feeGroups) {
+  #addCurrentClientValue(equityField) {
+    // Converte as exceptionOptions para array
+    const exceptionsOptions = Array.from(this.#allExceptions);
+    for (const feeGroup of this.#investiment.feeGroups) {
       feeGroup.cif = this.#accounts[0]?.cifno || null;
       for (const field of feeGroup.fields) {
-        if (!field.isException) {
-          if (field.isCurrentClient) {
-            const numValue = parseFloat(field.defaultValue);
-            field.defaultValue = !isNaN(numValue) ? numValue.toFixed(2) : field.defaultValue;
-            field.labelValue = !isNaN(numValue) ? "$" + numValue.toFixed(2) : field.defaultValue;
-          } else {
-            const numValue = parseFloat(field.defaultValue);
-            field.labelValue = !isNaN(numValue) ? "$" + numValue.toFixed(2) : field.defaultValue;
+        if (field.isException) {
+          field.labelValue = field.labelValue || '';
+        } else {
+          // Para cada field, encontra a conta correspondente (baseada no número e no código)
+          const corresponding = this.#accountsDDA.find(
+            (acc) =>
+              acc.number.toString() === feeGroup.accountNumber.toString() &&
+              acc.code === field.code
+          );
+          if (corresponding) {
+            if (field.code === 9 && field.code === 7) {
+              // Para o código 5, deixa o valor textual intacto
+              field.labelValue = field.defaultValue;
+            } else {
+              const numValue = parseFloat(field.defaultValue);
+              field.labelValue =
+                !isNaN(numValue) ? "$" + numValue.toFixed(2) : field.defaultValue;
+            }
           }
         }
       }
@@ -130,12 +197,9 @@ export default class BankAccountFee {
     this.#clearMemory();
   }
 
-  get fee() {
-    return this.#bank;
-  }
-
   #clearMemory() {
     this.#accounts = [];
     this.#accountsDDA = [];
+    this.#allExceptions = new Set();
   }
 }
